bin_PROGRAMS = $(top_builddir)/bin/perseus

__top_builddir__bin_perseus_SOURCES = main.cpp helpers.cpp diagnostics/diagnostics.cpp diagnostics/actions.cpp mission_control/mission_control.cpp mission_control/actions.cpp thruster_control/thruster_control.cpp init_camera_feed.cpp init_gps_fix.cpp imu/imu_receiver.cpp imu/quaternion.cpp imu/init_imu.cpp vehicle_control/vehicle_control.cpp dst/init_dst.cpp
__top_builddir__bin_perseus_LDFLAGS = -pthread 
__top_builddir__bin_perseus_CFLAGS = --pedantic -Wall -stc=c99 -02 
